@@ -1,3 +1,8 @@
+2018-03-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* components/sdcc.mk:
+	  Enable testing of diagnostics for snapshots.
+
 2017-12-01 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* local/cubieboard2.mk:
